fix: missing ARRAY union types coverage